syntax = "proto3";
package joltify.joltifychain.lockup;

import "gogoproto/gogo.proto";
import "lockup/lock.proto";

option go_package = "gitlab.com/joltify/joltifychain/x/lockup/types";

// GenesisState defines the lockup module's genesis state.
message GenesisState {
  uint64 last_lock_id = 1;
  repeated PeriodLock locks = 2 [ (gogoproto.nullable) = false ];
  repeated SyntheticLock synthetic_locks = 3 [ (gogoproto.nullable) = false ];
}
